--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
-    Among us!!!!!!
+    <h1>Welcome to the official website of FTC team 17768!</h1>
   </body>
 </html>
