--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   </head>
   <body class="body1">
     <h1>Welcome to the official website of FTC team 17768!</h1>
+    <a href="upcoming-meets.html">Upcoming Meets</a><br>
+    <a href="upcoming-games.html">Upcoming Games</a><br>
+    <a href="donate.html">Donate</a>
+    <a href="store.html">Merch</a>
   </body>
 </html>
