--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body class="body1">
     <h1>Welcome to the official website of FTC team 17768!</h1>
+    <iframe frameborder="0" height="500px" width="100%" src="https://calendar.online/b360b48507ed1900e376?iframe=true"></iframe>
     <a href="upcoming-meets.html">Upcoming Meets</a><br>
     <a href="upcoming-games.html">Upcoming Games</a><br>
     <a href="donate.html">Donate</a>
