--- a/upcoming-meets.html
+++ b/upcoming-meets.html
@@ -7,8 +7,8 @@
         <link rel="manifest" href="/site.webmanifest">
         <link rel="stylesheet" href="style.css">
       </head>
-      <body class="body1">
+      <body class="body2">
         <h1>Upcoming Meets</h1><br>
-        
+        Meetings are held on <b>Tuesdays</b> and <b>Thursdays</b> at Holly High School
       </body>
 </html>
