--- a/upcoming-games.html
+++ b/upcoming-games.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Upcoming Meets</title>
+        <title>Upcoming Games</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -9,6 +9,6 @@
       </head>
       <body class="body1">
         <h1>Upcoming Games</h1><br>
-        
+        Nothing here right now!
       </body>
 </html>
