--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>FTC Team 17768</title>
+    <title>Little Hollywood Page</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -9,10 +9,7 @@
   </head>
   <body class="body1">
     <h1>Welcome to the official website of FTC team 17768!</h1>
-    <iframe frameborder="0" height="500px" width="100%" src="https://calendar.online/1cf7c013829e0daae3d4?iframe=true"></iframe>
-    <a href="upcoming-meets.html">Upcoming Meets</a><br>
-    <a href="upcoming-games.html">Upcoming Games</a><br>
+    <a href="upcoming-meets.html">Upcoming Events (Team Calendar)</a><br>
     <a href="donate.html">Donate</a>
-    <a href="store.html">Merch</a>
   </body>
 </html>
