--- a/upcoming-meets.html
+++ b/upcoming-meets.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
       </head>
       <body class="body2">
-        <h1>Upcoming Meets</h1><br>
-        Meetings are held on <b>Tuesdays</b> and <b>Thursdays</b> at Holly High School
+        <h1>Team Calendar</h1><br>
+        <iframe frameborder="0" height="100%" width="100%" src="https://calendar.online/1cf7c013829e0daae3d4?iframe=true"></iframe>
       </body>
 </html>
