--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="body1">
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
     <h1>Welcome to the official website of FTC team 17768!</h1>
     <a href="upcoming-meets.html">Upcoming Events (Team Calendar)</a><br>
     <a href="donate.html">Donate</a>
