--- a/upcoming-meets.html
+++ b/upcoming-meets.html
@@ -8,6 +8,12 @@
         <link rel="stylesheet" href="style.css">
       </head>
       <body class="body2">
+        <div class="topnav">
+          <a href="index.html">Home</a>
+          <a class="active" href="upcoming-meets.html">Calendar</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
         <h1>Team Calendar</h1><br>
         <iframe frameborder="0" height="100%" width="100%" src="https://calendar.online/1cf7c013829e0daae3d4?iframe=true"></iframe>
       </body>
