--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Little Hollywood Page</title>
+    <title>Little Hollywood Team</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -9,13 +9,14 @@
   </head>
   <body class="body1">
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#news">News</a>
+      <a class="active" href="index.html">Home</a>
+      <a href="upcoming-meets.html">Calendar</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
+      <a href="donate.html">Donate</a>
     </div>
-    <h1>Welcome to the official website of FTC team 17768!</h1>
-    <a href="upcoming-meets.html">Upcoming Events (Team Calendar)</a><br>
-    <a href="donate.html">Donate</a>
+    <h1>Welcome to the official website of FTC team 17768, Little Hollywood!</h1>
+    <h3><a href="upcoming-meets.html">Upcoming Events (Team Calendar)</a></h3><br>
+    <a href="donate.html"><button class="donatebutton">Donate</button></a>
   </body>
 </html>
