--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <div class="topnav">
       <a class="active" href="index.html">Home</a>
       <a href="upcoming-meets.html">Calendar</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-      <a href="donate.html">Donate</a>
+      <a href="index.html/#contact">Contact</a>
+      <a href="index.html/#about">About</a>
     </div>
-    <h1>Welcome to the official website of FTC team 17768, Little Hollywood!</h1>
+    <h1>Welcome to the official website of FTC team Little Hollywood!</h1>
     <h3><a href="upcoming-meets.html">Upcoming Events (Team Calendar)</a></h3><br>
-    <a href="donate.html"><button class="donatebutton">Donate</button></a>
+    <a href="https://docs.google.com/presentation/d/1NkICvr0qfM_SjCyxpY79VpdqgYUWlz60/edit?usp=sharing&ouid=105865513910933675586&rtpof=true&sd=true"><img src="robotics_logo_final_transparent-removebg-preview.png"></a>
   </body>
 </html>
