--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </div>
     <h1>Welcome to the official website of FTC team Little Hollywood!</h1>
     <h3><a href="upcoming-meets.html">Upcoming Events (Team Calendar)</a></h3><br>
-    <a href="https://docs.google.com/presentation/d/1NkICvr0qfM_SjCyxpY79VpdqgYUWlz60/edit?usp=sharing&ouid=105865513910933675586&rtpof=true&sd=true"><img src="logo.jpg"></a>
+    <a href="https://docs.google.com/presentation/d/1NkICvr0qfM_SjCyxpY79VpdqgYUWlz60/edit?usp=sharing&ouid=105865513910933675586&rtpof=true&sd=true"><img src="logo.jpg" style="height: 20vh; width: 20vh;"></a>
   </body>
 </html>
