--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="index.html/#about">About</a>
     </div>
     <h1>Welcome to the official website of FTC team Little Hollywood!</h1>
-    <h3><a href="upcoming-meets.html"><img src="calendar.png" style="height: 35%;"><br>Team Calendar</a></h3><br>
+    <h3><a href="upcoming-meets.html"><img src="calendar.png" style="height: 35%;"></a></h3>
     <a href="https://docs.google.com/presentation/d/1NkICvr0qfM_SjCyxpY79VpdqgYUWlz60/edit?usp=sharing&ouid=105865513910933675586&rtpof=true&sd=true"><img src="cover.jpg" style="height: 35%; width: 30%;"></a>
   </body>
 </html>
